force-app/main/default/objects/Batch__c/fields/Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period__c</fullName>
    <label>Accounting Period</label>
    <type>Date</type>
</CustomField>