force-app/main/default/objects/Batch__c/fields/Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_Type__c</fullName>
    <label>Batch Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>