force-app/main/default/objects/Batch__c/fields/Batch_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Batch_Type_Formula__c</fullName>
    <formula>CASE( RecordType.Name , 
&#39;Contract Detail Auto Renewal&#39;, &#39;Contract Renewal&#39;,
&#39;Payment&#39;)</formula>
    <label>Batch Type Formula</label>
    <type>Text</type>
</CustomField>