force-app/main/default/objects/Batch__c/fields/Company_Reporting_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Reporting_Number__c</fullName>
    <formula>$Setup.ProducerServicesSettings__c.Company_Reporting_Number__c</formula>
    <label>Company Reporting Number</label>
    <type>Text</type>
</CustomField>