force-app/main/default/objects/Batch__c/fields/Daily_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Daily_Batch_Id__c</fullName>
    <label>Daily Batch Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>