force-app/main/default/objects/Batch__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <formula>$Setup.ProducerServicesSettings__c.FEIN__c</formula>
    <label>FEIN</label>
    <type>Text</type>
</CustomField>