force-app/main/default/objects/Batch__c/fields/Filing_Period__c.field-meta.xml
<CustomField>
    <fullName>Filing_Period__c</fullName>
    <formula>RIGHT(TEXT(YEAR(Accounting_Period__c)), 2) &amp; 
IF(MONTH(Accounting_Period__c) &lt; 10
  , &quot;0&quot;
  , &quot;&quot;
) &amp;
TEXT(MONTH(Accounting_Period__c))</formula>
    <label>Filing Period</label>
    <type>Text</type>
</CustomField>