force-app/main/default/objects/Batch__c/fields/Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Gross_Value__c</fullName>
    <label>Gross Value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>