force-app/main/default/objects/Batch__c/fields/Parent_Batch__c.field-meta.xml
<CustomField>
    <fullName>Parent_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>DOI Payment Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>