force-app/main/default/objects/Batch__c/fields/Payment_File_Created__c.field-meta.xml
<CustomField>
    <fullName>Payment_File_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment File Created</label>
    <type>Checkbox</type>
</CustomField>