force-app/main/default/objects/Batch__c/fields/Payment_Report_Data_Created__c.field-meta.xml
<CustomField>
    <fullName>Payment_Report_Data_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Report Data Created</label>
    <type>Checkbox</type>
</CustomField>