force-app/main/default/objects/Batch__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>$Setup.ProducerServicesSettings__c.Product_Code__c</formula>
    <label>Product Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>