force-app/main/default/objects/Batch__c/fields/Production_Period__c.field-meta.xml
<CustomField>
    <fullName>Production_Period__c</fullName>
    <label>Production Period</label>
    <type>Date</type>
</CustomField>