force-app/main/default/objects/Batch__c/fields/Taxpayer_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_ID_Number__c</fullName>
    <formula>$Setup.ProducerServicesSettings__c.Taxpayer_ID_Number__c</formula>
    <label>Taxpayer ID Number</label>
    <type>Text</type>
</CustomField>