force-app/main/default/objects/Batch__c/recordTypes/Contract_Detail_Auto_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Contract_Detail_Auto_Renewal</fullName>
    <active>true</active>
    <description>batch for auto renewing contract details</description>
    <label>Contract Detail Auto Renewal</label>
</RecordType>