force-app/main/default/objects/Batch__c/recordTypes/DOI_Deck.recordType-meta.xml
<RecordType>
    <fullName>DOI_Deck</fullName>
    <active>true</active>
    <label>DOI Deck</label>
</RecordType>