force-app/main/default/objects/Batch__c/recordTypes/DOI_Payment.recordType-meta.xml
<RecordType>
    <fullName>DOI_Payment</fullName>
    <active>true</active>
    <label>DOI Payment</label>
</RecordType>