force-app/main/default/objects/Batch__c/recordTypes/PS_Contract_Renewal.recordType-meta.xml
<RecordType>
    <fullName>PS_Contract_Renewal</fullName>
    <active>true</active>
    <description>contract renewal batch for producer services contracts</description>
    <label>PS Contract Renewal</label>
</RecordType>