force-app/main/default/objects/Batch__c/listViews/Contract_Renewal_Batches.listView-meta.xml
<ListView>
    <fullName>Contract_Renewal_Batches</fullName>
    <columns>NAME</columns>
    <columns>Production_Period__c</columns>
    <columns>Batch_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Batch__c.Contract_Detail_Auto_Renewal</value>
    </filters>
    <label>Contract Renewal Batches</label>
    <language>en_US</language>
</ListView>