force-app/main/default/objects/Batch__c/listViews/Payment_batches.listView-meta.xml
<ListView>
    <fullName>Payment_batches</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Accounting_Period__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Gross_Value__c</columns>
    <columns>Taxes__c</columns>
    <columns>Net_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Batch__c.Payment,Batch__c.DOI_Deck,Batch__c.DOI_Payment</value>
    </filters>
    <label>Payment batches</label>
    <language>en_US</language>
</ListView>